Added html file

--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <title>INFO2180 Lab 1</title>
 </head>
 <body>
- <header>
+<center>
+    <img src="jahm.png" width="300" height="290"/>
+  <header>
      <h1>INFO2180 Lab 1</h1>
      <p>This is a simple webpage for Lab 1 of INFO2180.</p>
- </header>
- <main>
+  </header>
+  <main>
  <h2>Jahmoe Brown</h2>
  <p>Enthusiastic kid, and really a hardcore gamer, just a try make it out. Wanted to to do web dev to get a more hands on approach in develpoing my skills in web development as my dream is to become a game developer</p>
  </main>
  <footer>
  <p>Copyright &copy; 2020 Jahmoe Brown.</p>
  </footer>
+</center>
 </body>
+<link rel="stylesheet" href="styles.css">
 </html>
